--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "### Stewart Merritt\n",
     "#### 12/6/2024\n",
-    "#### Purpose: Analayze the data collected from last seasons NBA season to find valuable information"
+    "#### Purpose: Analayze the data collected from last seasons NBA season to find valuable information\n",
+    "#### Source of data: https://www.kaggle.com/datasets/orkunaktas/nba-players-stats-2324"
    ]
   },
   {
